--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Digital — Plateforme numérique innovante" />
     <meta property="og:description" content="Découvrez Digital, une plateforme tout-en-un dédiée à la transformation numérique et à la gestion intelligente de vos services." />
-    <meta property="og:url" content="https://www.digital.com" />
-    <meta property="og:image" content="/img/og-image.jpg" />
+    <meta property="og:url" content="https://digital-company.web.app/" />
+    <meta property="og:image" content="https://digital-company.web.app/img/wall.webp" />
     <meta property="og:site_name" content="Digital" />
     <meta property="og:locale" content="fr_FR" />
 
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Digital — Plateforme numérique innovante" />
     <meta name="twitter:description" content="Plateforme de solutions digitales et automatisées pour entreprises et particuliers." />
-    <meta name="twitter:image" content="/img/twitter-image.jpg" />
+    <meta name="twitter:image" content="/img/wall.webp" />
     <meta name="twitter:creator" content="@digital" />
 
     <!-- Favicons -->
