--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Digital — Plateforme numérique innovante" />
     <meta property="og:description" content="Découvrez Digital, une plateforme tout-en-un dédiée à la transformation numérique et à la gestion intelligente de vos services." />
     <meta property="og:url" content="https://digital-company.web.app/" />
-    <meta property="og:image" content="https://digital-company.web.app/img/wall.webp" />
+    <meta property="og:image" content="/img/wall.webp" />
     <meta property="og:site_name" content="Digital" />
     <meta property="og:locale" content="fr_FR" />
 
@@ -48,14 +48,7 @@
     <!-- Compatibility -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- Security -->
-    <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self';
-               script-src 'self' 'unsafe-inline' 'unsafe-eval';
-               style-src 'self' 'unsafe-inline';
-               img-src 'self' data: https:;
-               font-src 'self' data:;
-               connect-src 'self' https://api.digital.com;" />
+    
 
     <!-- Styles Critiques -->
     <style>
